[project]
name = "flexible-clustering"
version = "0.1.0"
description = ""
authors = [
    {name = "Chiheon Kim",email = "chiheonkim@postech.ac.kr"}
]
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "setuptools (>=80.7.1,<81.0.0)",
    "cython (>=3.1.1,<4.0.0)",
    "hdbscan (>=0.8.40,<0.9.0)",
    "numpy (>=1.24.4,<3.0.0)"
]


[build-system]
requires = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"
